<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent" >

  <!-- tickerText -->
  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    <TextView  
       android:layout_width="100sp" 
       android:layout_height="wrap_content"
       android:text="@string/tickerText" />
    <EditText
       android:id="@+id/tickerText"  
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" />
  </LinearLayout>

  <!-- number -->
  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    <TextView  
       android:layout_width="100sp" 
       android:layout_height="wrap_content"
       android:text="@string/number" />
    <EditText
       android:id="@+id/number"  
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" />
  </LinearLayout>

  <!-- contentTitle -->
  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    <TextView  
       android:layout_width="100sp" 
       android:layout_height="wrap_content"
       android:text="@string/contentTitle" />
    <EditText
       android:id="@+id/contentTitle"  
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" />
  </LinearLayout>

  <!-- contentText -->
  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    <TextView  
       android:layout_width="100sp" 
       android:layout_height="wrap_content"
       android:text="@string/contentText" />
    <EditText
       android:id="@+id/contentText"  
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" />
  </LinearLayout>

  <!-- when -->
  <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    <TextView  
       android:layout_width="100sp" 
       android:layout_height="wrap_content"
       android:text="@string/when" />
    <EditText
       android:id="@+id/when"  
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content" />
  </LinearLayout>

  <!-- Button -->
  <LinearLayout
     android:orientation="horizontal"
     android:gravity="right"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    <Button
       android:id="@+id/notify"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
       android:text="@string/notify" />
    <Button
       android:id="@+id/cancel"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
       android:text="@string/cancel" />
  </LinearLayout>
</LinearLayout>
